the first commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,18 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/tacofood?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=mysql
 spring.datasource.password=mysql
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=eynnc@yandex.ru
+spring.mail.password=etooo
+spring.mail.port=465 
+spring.mail.protocol=smtps
+mail.debug=true
+
+# создает таблицы в бд для сохранений сессий(чтоб при перезагрузке приложения юзер остался авторизованным)
+spring.session.jdbc.initialize-schema=always 
+spring.session.jdbc.table-name=SPRING_SESSION
